--- a/T7RNAP_PMPNN/singlePDB/230913_pmpnn_1CEZ/outputs/seqs/readme
+++ b/T7RNAP_PMPNN/singlePDB/230913_pmpnn_1CEZ/outputs/seqs/readme
@@ -4,3 +4,4 @@ among PMPNN generated sequences.
 1- Run format_allseq.sh to format the PMPNN sequences.
 2- Run exec.sh that calls pairwise.sh
 3- If there was a problem with any batch run, call compare4missing.sh to rerun the missing sequences.
+4- Instead of exec.sh you can also call exec_reqjobs.sh which checks for failing jobs on the run and reinitiate it.
